# vajax

./: .gitignore  .gitmodules  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile.gpu-base  Dockerfile.gpu-tests  README.md  TODO.md  index.html  index.md  mkdocs.yml  pyproject.toml
.github/: actionlint.yaml
OPENVAF_API_PLAN/: index.html
VACASK-ANALYSIS/: index.html
api_reference/: index.html
architecture_overview/: index.html
archive/code-november-2024/openvaf-py/: Cargo.toml  README_OSDI_BINDINGS.md  compare_jax_interpreter.py  fix_mir_callback.patch  pyproject.toml  run_tests_debug.py  test_all_models.py  test_jax_diode.py  test_jax_resistor.py  test_pdk_models.py
archive/code-november-2024/openvaf-py/openvaf_ast/: __init__.py  builder.py
archive/code-november-2024/openvaf-py/openvaf_jax/: __init__.py
archive/code-november-2024/openvaf-py/openvaf_jax/codegen/: __init__.py  function_builder.py
archive/code-november-2024/openvaf-py/openvaf_jax/mir/: __init__.py  cfg.py
archive/code-november-2024/openvaf-py/src/: lib.rs
archive/code-november-2024/openvaf-py/tests/: check_missing_params.py  debug_hidden_state_mapping.py  debug_init_hidden_state.py  debug_mir_structure.py  debug_psp103_cache.py  debug_psp103_init_values.py  debug_psp103_interpreter.py  fix_psp103_with_defaults.py  snap_parser.py  test_bjt_models.py  test_hemt_models.py  test_hisim_models.py  test_jax_equivalence.py  test_mosfet_models.py  test_nonzero_defaults.py  test_osdi_evaluation.py  test_osdi_metadata.py  test_psp_models.py  test_simple_models.py  test_va_features.py  validate_mir_python_codegen.py
archive/code-november-2024/openvaf-py/tests_pdk/: pdk_utils.py  test_gf130.py
benchmarks/: bench_transient.py  test_benchmarks.py
ci-status/: index.html
cli_reference/: index.html
configuration/: index.html
debug_tools/: index.html
docs/: CACHE_SLOTS_ANALYSIS.md  CODEGEN_METADATA_API.md  IMPLEMENTATION_PLAN.md  MIR_INTERPRETER_RELIABILITY.md  OPENVAF_API_PLAN.md  PARAMETER_MAPPING_SOLUTION.md  PHASE3A_SUMMARY.md  PHASE5_VALIDATION_PROGRESS.md  PHI_NODE_BUG.md  README.md  RESTART_PROMPT.md  api_reference.md  architecture_overview.md  cli_reference.md  configuration.md  debug_tools.md  getting_started.md  gpu_solver_architecture.md  gpu_solver_jacobian.md  gpu_sparse_solver_investigation.md  memory_management.md  osdi_parameter_architecture.md  parallelism_architecture.md  performance_analysis.md  phi_nodes_guide.md  psp102_debug_plan.md  sim_back_vs_openvaf_jax.md  sparse_solver_roadmap.md  supported_devices.md  transient_options.md  transient_step_dependencies.md  vacask_sim_format.md  verilog_a_system_functions.md
examples/: cmos_inverter.py  test_builtin_primitives.py  test_debug.py  test_diode_mir.py  test_diode_rectifier.py  test_inverter_debug.py  test_mir_translator.py  test_osdi_debug.py  test_osdi_diode.py  test_resistor_divider.py  test_simple.py
getting_started/: index.html
gpu_solver_architecture/: index.html
gpu_solver_jacobian/: index.html
homebrew/: README.md
jax_spice/: __init__.py  _logging.py  circuit.py  cli.py  logging.py  profiling.py  simulator.py
memory_management/: index.html
openvaf-py/: Cargo.toml  DESIGN_OSDI_BINDING.md  RUST_WRAPPER_IMPLEMENTATION.md  jax_emit.py  openvaf_jax.py  openvaf_jax_old.py  openvaf_py.pyi  pyproject.toml
openvaf-py/openvaf_ast/: builder.py  expressions.py  statements.py
openvaf-py/openvaf_jax/: __init__.py  cache.py
openvaf-py/openvaf_jax/codegen/: context.py  function_builder.py  instruction.py
openvaf-py/openvaf_jax/mir/: __init__.py  ssa.py  types.py
openvaf-py/src/: lib.rs
openvaf-py/tests/: conftest.py  snap_parser.py  test_ast_generation.py  test_jax_analytical.py  test_jax_emit.py  test_jax_interpreter.py  test_jax_vs_osdi.py  test_model_param_setup.py  test_osdi_methodology.py  test_psp103_realistic.py  test_simple_models.py
openvaf-py/tests_pdk/: __init__.py  conftest.py  test_gf130.py
openvaf_jax/: __init__.py  cache.py
openvaf_jax/openvaf_py/: Cargo.toml  pyproject.toml  test_jax_diode.py  test_pdk_models.py
openvaf_jax/openvaf_py/src/: lib.rs
openvaf_jax/openvaf_py/tests/: conftest.py  test_all_models.py  test_hemt_models.py  test_hisim_models.py  test_jax_equivalence.py  test_jax_interpreter.py  test_jax_vs_osdi.py  test_mosfet_models.py  test_osdi_methodology.py  test_simple_models.py  test_va_features.py
openvaf_jax/openvaf_py/tests_pdk/: pdk_utils.py  test_gf130.py
openvaf_jax/osdi_py/: pyproject.toml
openvaf_jax/osdi_py/src/: lib.rs
osdi_parameter_architecture/: index.html
parallelism_architecture/: index.html
performance_analysis/: index.html
phi_nodes_guide/: index.html
planning/: IMPLEMENTATION_PLAN.md
scripts/: analyze_config_groups.py  analyze_dense_jaxpr.py  analyze_parallelism.py  benchmark_mlx.py  benchmark_utils.py  build_openvaf.sh  build_vacask.sh  build_vacask_deps.sh  capture_benchmark_matrices.py  check_cache_mapping.py  check_constant_folding.py  check_generated_phi_code.py  check_init_cache_values.py  check_init_param_arrays.py  check_init_param_mapping.py  check_mir_structure.py  check_native_init_params.py  compare_dc_op.py  compare_dc_operating_point.py  compare_device_params.py  compare_lte_solvers.py  compare_psp103_dc_eval.py  compare_results.py  compare_ring_debug.py  compare_vacask.py  debug_charge_comparison.py  debug_graetz_early.py  debug_graetz_vsource.py  debug_ring_pulse.py  diagnose_lte_divergence.py  dump_model_param_setup_mir.py  experiment_diffrax.py  extract_c6288_jacobian.py  fix_and_test_init.py  gcp_cuda_setup.sh  generate_summary.py  generated_eval_bsim4.py  generated_eval_psp103.py  generated_setup_instance_bsim4.py  generated_setup_instance_capacitor_fixed.py  (+32 more)
search/: search_index.json
tests/: conftest.py  (+38 more)
va-builder/: pyproject.toml
va-builder/tests/: test_builder.py
va-builder/va_builder/: __init__.py  builder.py
vajax/sparse/: .gitignore  CMakeLists.txt  README.md  __init__.py  pyproject.toml  umfpack_ffi.cpp  umfpack_jax.py
vajax/sprux/: CMakeLists.txt  pyproject.toml  sprux_ffi.cpp  sprux_jax.py
(+285 files in other folders)
