[project]
name = "jax-spice"
version = "0.1.0"
description = "JAX-based analog circuit simulator with Verilog-A support"
authors = [{name = "ChipFlow"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "jax>=0.8.0",
    "jaxtyping>=0.2.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "openvaf-py",
    "klujax>=0.4.3",
    "simpleeval>=1.0.0",
]

[tool.uv.workspace]
members = ["openvaf_jax/openvaf_py", "openvaf_jax/osdi_py", "jax_spice/sparse"]

[tool.uv.sources]
openvaf-py = { workspace = true }
osdi-py = { workspace = true }
umfpack-jax = { workspace = true }

[project.optional-dependencies]
cuda12 = [
    # JAX 0.8+ uses jax-cuda12-plugin for CUDA support
    "jax-cuda12-plugin>=0.8.0; sys_platform != 'darwin'",
    # Spineax: cuDSS sparse solver with cached symbolic factorization
    # Using ChipFlow fork with jaxlib compatibility fix
    # Note: Only works on Linux with CUDA
    "spineax @ git+https://github.com/robtaylor/spineax.git",
]
# UMFPACK solver for CPU sparse solving (requires libsuitesparse-dev + swig)
# Falls back to klujax if not available
umfpack = [
    "scikit-umfpack>=0.4.2",
]
# UMFPACK FFI extension - zero callback overhead (requires libsuitesparse-dev)
umfpack-ffi = [
    "umfpack-jax",
]
sax = [
    "sax>=0.13.0",
]
# Test dependencies - minimal set for running tests
test = [
    "pytest>=7.4.0",
    "pytest-cov",
    "beartype>=0.18.0",  # Runtime type checking with jaxtyping
    "osdi-py",  # For OSDI vs JAX comparison tests
]
# Full dev dependencies - includes test + linting + CPU sparse solver
# Note: umfpack-jax (FFI extension) requires separate build step - use --extra umfpack-ffi after building
dev = [
    "pytest>=7.4.0",
    "pytest-cov",
    "beartype>=0.18.0",
    "ruff",
    "pyright",
    "scikit-umfpack>=0.4.2",  # Requires libsuitesparse-dev + swig
    "osdi-py",  # For OSDI vs JAX comparison tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "radon>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["jax_spice", "openvaf_jax"]

[tool.hatch.build.targets.sdist]
include = [
    "jax_spice/**/*.py",
    "jax_spice/benchmarks/data/*",
    "openvaf_jax/**/*.py",
]

[project.scripts]
jax-spice = "jax_spice.cli:main"
jax-spice-benchmark = "jax_spice.benchmarks.c6288:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# Ignore variable naming rules for uppercase matrix/vector names (common in numerical code)
# N803: argument name should be lowercase (V_history, V_pred, etc.)
# N806: variable in function should be lowercase (V_pred, Q_prev, etc.)
# N815: variable in class scope should not be mixedCase (dQdt_prev)
ignore = ["N803", "N806", "N815"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = ["**/vendor/**", "openvaf_jax/openvaf_py/**"]
reportMissingImports = "warning"
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportReturnType = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportInvalidTypeForm = "warning"
reportOperatorIssue = "warning"
reportOptionalOperand = "warning"

[tool.pytest]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

