[project]
name = "va-jax"
version = "0.1.0"
description = "JAX-based analog circuit simulator with Verilog-A support"
authors = [{name = "ChipFlow"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "jax>=0.9.0",
    "jaxtyping>=0.2.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "openvaf-py",
    "simpleeval>=1.0.0",
    "jaxlib>=0.9.0",
    "umfpack-jax",
]

[tool.uv.workspace]
members = ["openvaf_jax/openvaf_py", "openvaf_jax/osdi_py", "vajax/sparse"]

[tool.uv.sources]
openvaf-py = { workspace = true }
osdi-py = { workspace = true }
umfpack-jax = { workspace = true }

[project.optional-dependencies]
cuda12 = [
    # JAX 0.9+ uses jax-cuda12-plugin for CUDA support
    "jax-cuda12-plugin>=0.9.0; sys_platform != 'darwin'",
    # Spineax: cuDSS sparse solver with cached symbolic factorization
    # Using ChipFlow fork with jaxlib compatibility fix
    # Note: Only works on Linux with CUDA
    "spineax @ git+https://github.com/robtaylor/spineax.git",
]
# UMFPACK solver for CPU sparse solving (requires libsuitesparse-dev + swig)
# Falls back to klujax if not available
umfpack = [
    "scikit-umfpack>=0.4.2",
]
# UMFPACK FFI extension - zero callback overhead (requires libsuitesparse-dev)
umfpack-ffi = [
    "umfpack-jax",
]
sax = [
    "sax>=0.13.0",
]
# Test dependencies - minimal set for running tests
test = [
    "pytest>=7.4.0",
    "pytest-cov",
    "beartype>=0.18.0",  # Runtime type checking with jaxtyping
    "osdi-py",  # For OSDI vs JAX comparison tests
]
# Full dev dependencies - includes test + linting + CPU sparse solver
# Note: umfpack-jax (FFI extension) requires separate build step - use --extra umfpack-ffi after building
dev = [
    "pytest>=7.4.0",
    "pytest-cov",
    "beartype>=0.18.0",
    "ruff",
    "pyright",
    "scikit-umfpack>=0.4.2",  # Requires libsuitesparse-dev + swig
    "osdi-py",  # For OSDI vs JAX comparison tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "radon>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vajax", "openvaf_jax"]
exclude = ["openvaf_jax/openvaf_py/target", "openvaf_jax/osdi_py/target"]

[tool.hatch.build.targets.sdist]
include = [
    "vajax/**/*.py",
    "vajax/benchmarks/data/*",
    "openvaf_jax/**/*.py",
]

[project.scripts]
va-jax = "vajax.cli:main"
va-jax-benchmark = "vajax.benchmarks.c6288:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# Ignore variable naming rules for uppercase matrix/vector names (common in numerical code)
# N803: argument name should be lowercase (V_history, V_pred, etc.)
# N806: variable in function should be lowercase (V_pred, Q_prev, etc.)
# N815: variable in class scope should not be mixedCase (dQdt_prev)
# N802: function name should be lowercase (NR_solve, etc.)
# N816: variable in global scope should not be mixedCase
# E501: Line too long
# E402: Module level import not at top of file (intentional for lazy loading)
# E741: Ambiguous variable name (l, I, O) - common in circuit simulation (I=current, l=length)
# E721: Type comparison using == instead of isinstance (used intentionally with JAX arrays)
# F403/F405: Star imports (used in __init__.py for public API)
ignore = ["N803", "N806", "N815", "N802", "N816", "E501", "E402", "E741", "E721", "F403", "F405"]

[tool.ruff.lint.per-file-ignores]
# Allow star imports in __init__.py files
"__init__.py" = ["F401"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = ["**/vendor/**", "openvaf_jax/openvaf_py/**"]
reportMissingImports = "warning"
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportReturnType = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportInvalidTypeForm = "warning"
reportOperatorIssue = "warning"
reportOptionalOperand = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "public_api: tests public interface",
    "internal: tests implementation details",
    "experimental: tests unfinished features",
]

