[project]
name = "va-builder"
version = "0.1.0"
description = "Programmatic VACASK netlist builder"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["va_builder"]
