[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openvaf-py"
version = "0.1.0"
description = "Python bindings for OpenVAF MIR interpreter"
requires-python = ">=3.10"
license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/ChipFlow/vajax"
Documentation = "https://chipflow.github.io/vajax/packages/openvaf-py/"
Repository = "https://github.com/ChipFlow/vajax/tree/main/openvaf_jax/openvaf_py"
Issues = "https://github.com/ChipFlow/vajax/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.cibuildwheel]
# pyo3 0.19.2 doesn't support Python 3.13
build = ["cp311-*", "cp312-*"]
skip = ["*-musllinux_*", "*-win32", "*_i686"]

[tool.cibuildwheel.linux]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
# Rust is pre-installed on GitHub macOS runners

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "numpy>=1.20",
    "jax>=0.4",
    "jaxlib>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pyright]
exclude = ["vendor/", ".venv/"]
