# UMFPACK JAX FFI Extension
# This is a separate build target for the UMFPACK FFI extension.
# Build with: cd vajax/sparse && pip install .

[project]
name = "umfpack-jax"
version = "0.1.0"
description = "UMFPACK FFI bindings for JAX - high-performance sparse direct solver"
authors = [{name = "ChipFlow"}]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.29,<0.10",
    "numpy>=1.24.0",
]
readme = "README.md"
license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/ChipFlow/vajax"
Documentation = "https://chipflow.github.io/vajax/packages/umfpack-jax/"
Repository = "https://github.com/ChipFlow/vajax/tree/main/vajax/sparse"
Issues = "https://github.com/ChipFlow/vajax/issues"

[build-system]
requires = [
    "scikit-build-core>=0.8",
    "nanobind>=1.8",
    "jax>=0.4.29,<0.10",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
build.verbose = true

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*"]
skip = ["*-musllinux_*", "*-win32", "*_i686"]
# Use manylinux_2_28 (AlmaLinux 8) — scipy has pre-built wheels for this platform
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# FetchContent in CMakeLists.txt downloads + builds SuiteSparse v7.8.3 from source.
# Only system BLAS is needed (openblas on Linux, Accelerate on macOS).

[tool.cibuildwheel.linux]
before-all = [
    # OpenBLAS for SuiteSparse build (dnf on AlmaLinux 8 / manylinux_2_28)
    "dnf install -y openblas-devel || yum install -y openblas-devel",
]

[tool.cibuildwheel.macos]
# macOS uses Accelerate framework (always available) - no extra deps needed
