[package]
name = "openvaf-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for OpenVAF MIR interpreter"

[lib]
name = "openvaf_py"
crate-type = ["cdylib"]

[features]
# Enable OSDI bindings for direct comparison testing
# Usage: cargo build --release --features osdi-bindings
osdi-bindings = ["osdi"]
default = []

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }

# OpenVAF dependencies (using vendored OpenVAF submodule)
mir = { path = "vendor/OpenVAF/openvaf/mir" }
mir_interpret = { path = "vendor/OpenVAF/openvaf/mir_interpret" }
sim_back = { path = "vendor/OpenVAF/openvaf/sim_back" }
hir = { path = "vendor/OpenVAF/openvaf/hir" }
hir_lower = { path = "vendor/OpenVAF/openvaf/hir_lower" }
basedb = { path = "vendor/OpenVAF/openvaf/basedb" }
paths = { path = "vendor/OpenVAF/lib/paths" }
syntax = { path = "vendor/OpenVAF/openvaf/syntax" }

# Optional OSDI dependency (for setup_model comparison)
osdi = { path = "vendor/OpenVAF/openvaf/osdi", optional = true }

# Other dependencies
lasso = "0.7"
typed-index-collections = "3.1"

# Patch to use the same salsa version as OpenVAF
[patch.crates-io]
salsa = { git = 'https://github.com/pascalkuthe/salsa' }
