[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openvaf-py"
version = "0.1.0"
description = "Python bindings for OpenVAF MIR interpreter"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "numpy>=1.20",
    "jax>=0.4",
    "jaxlib>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
